[package]
name = "wasi-worker"
version = "0.3.3"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WASM/WASI interface for browser service workers"
readme = "README.md"
keywords = ["wasi", "wasm", "browser", "service", "worker"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/dunnock/wasi-worker"

[workspace]
members = ["crates/*", "examples/*"]

[dependencies]


[patch.crates-io]
# yew should be changesd once PR https://github.com/yewstack/yew/pull/721 lands:
# yew = { path = "../../../opensource/yew" }
yew = { git = "https://github.com/dunnock/yew", branch = "extensible-agent" }
