[package]
name = "wasi-worker"
version = "0.5.1"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "WASM/WASI interface for browser service workers"
readme = "README.md"
keywords = ["wasi", "wasm", "browser", "service", "worker"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/dunnock/wasi-worker"

[workspace]
members = ["crates/*", "examples/*"]

[dependencies]
