[package]
name = "wasi-worker-cli"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tool to create and deploy WASM WASI-based browser service workers"
readme = "README.md"
keywords = ["cli", "install", "wasi", "wasm", "worker"]
categories = ["command-line-utilities", "wasm", "web-programming"]

[[bin]]
name = "wasiworker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
wasi-worker = { path = ".." }
