[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
categories = [
    "command-line-utilities",
    "wasm",
    "web-programming",
]
description = "Tool to create and deploy WASM WASI-based browser service workers"
documentation = "https://crates.io/crates/wasi-worker-cli"
edition = "2018"
keywords = [
    "cli",
    "install",
    "wasi",
    "wasm",
    "worker",
]
license = "MIT"
name = "wasi-worker-cli"
readme = "README.md"
repository = "https://github.com/dunnock/wasi-worker/tree/master/wasi-worker-cli"
version = "0.2.1"

[[bin]]
name = "wasiworker"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
toml_edit = "0.1"

[dependencies.wasi-worker]
path = ".."
version = "0.3"

[dev-dependencies]
fs_extra = "1.1"
dir-diff = "0.3"