[package]
name = "wasi-worker-yew"
version = "0.2.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WASM/WASI browser service worker for yew (Agent<Reach=Public>)"
readme = "README.md"
keywords = ["wasi", "wasm", "browser", "yew", "service worker", "worker"]
categories = ["web-programming", "webassembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi = "0.7"
wasi-worker = { path = ".." }
# yew should be changesd once PR https://github.com/yewstack/yew/pull/719 lands:
yew = { git = "https://github.com/dunnock/yew" }
#yew = { path = "../../../opensource/yew" }
anymap = "0.12"