[package]
version = "0.4.0"
name = "wasi-worker-cli"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
categories = [
    "command-line-utilities",
    "wasm",
    "web-programming",
]
description = "Tool to create and deploy WASM WASI-based browser service workers"
documentation = "https://crates.io/crates/wasi-worker-cli"
edition = "2018"
keywords = [
    "cli",
    "install",
    "wasi",
    "wasm",
    "worker",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dunnock/wasi-worker/tree/master/wasi-worker-cli"

[[bin]]
name = "wasiworker"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
toml_edit = "0.1"
wasm-gc-api = "0.1"

[dev-dependencies]
fs_extra = "1.1"
dir-diff = "0.3"
