[package]
version = "0.5.0"
name = "wasi-worker-cli"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
categories = [
    "command-line-utilities",
    "wasm",
    "web-programming",
]
description = "Tool to create and deploy WASM WASI-based browser service workers"
documentation = "https://crates.io/crates/wasi-worker-cli"
edition = "2018"
keywords = [
    "cli",
    "install",
    "wasi",
    "wasm",
    "worker",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dunnock/wasi-worker/tree/master/wasi-worker-cli"
exclude = ["js/src", "js/*.json", "js/*.js"]

[[bin]]
name = "wasiworker"
path = "src/main.rs"

[dependencies]
structopt = { version="0.3", default-features = false }
toml_edit = "0.2"
wasm-gc-api = "0.1"

[dev-dependencies]
fs_extra = "1.2"