[package]
name = "wasi-worker-yew"
version = "0.3.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WASM/WASI browser service worker for yew (Agent<Reach=Public>)"
readme = "README.md"
keywords = ["wasi", "wasm", "worker", "yew", "agent"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/dunnock/wasi-worker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-worker = { path = "../..", version = "0.3" }
yew = "0.10"
#yew = { git = "https://github.com/dunnock/yew", branch = "extensible-agent", version = "0.10" }
anymap = "0.12"
