[package]
name = "wasi-worker-yew"
version = "0.5.2"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "WASM/WASI browser service worker for yew (Agent<Reach=Public>)"
readme = "README.md"
keywords = ["wasi", "wasm", "worker", "yew", "agent"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/dunnock/wasi-worker/tree/master/crates/wasi-worker-yew"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-worker = { path = "../..", version = "0.5" }
yew = "0.11"
anymap = "0.12"
