[package]
name = "yewworker"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="sendmessage"
path = "src/bin/sendmessage.rs"

[[bin]]
name="main"
path = "src/main.rs"

[dependencies]
wasi-worker-yew = { path="../../wasi-worker-yew" }
yew = { git = "https://github.com/dunnock/yew" }
serde_json = "1.0"
serde = "1.0"