[package]
name = "testcli"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-worker = "0.3"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
